--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - "3.5"
 
 install:
-  - pip install --user -r ci_requirements.txt
+  - pip install --user -r requirements_ci.txt
   - pip install --user -r requirements.txt
 
 script: pytest
